<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">咖啡屋</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>


    <string name="tab_todo_orders">待处理单</string>
    <string name="tab_orders_query">订单查询</string>
    <string name="tab_shop_manager">门店管理</string>

    <string name="tab_order_to_make">待生产</string>
    <string name="tab_order_have_maked">已生成</string>
    <string name="tab_order_delivering">配送中</string>
    <string name="tab_order_have_finished">已完成</string>

    <string name="empty_no_orders">暂无订单</string>

    <string name="sort_by_order_time">按下单时间排序</string>
    <string name="sort_by_delivery_effect">按配送时效排序</string>
    <string name="sort_by_produce_effect">按生产时效排序</string>

    <string name="category_order">预约单</string>
    <string name="category_now">尽快送达单</string>
    <string name="category_all">全部订单</string>

    <string name="username_empty_prompt">用户名不能为空</string>
    <string name="password_empty_prompt">密码不能为空</string>
    <string name="unknown_error">未知错误</string>
    <string name="parse_json_fail">数据解析失败</string>
    <string name="loading">正在加载..</string>

    <string name="click_error">点错啦</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="do_success">操作成功</string>

    <string name="menu_undo_order">收回订单</string>
    <string name="menu_scan_code">扫码交付</string>

    <string name="question_type">问题类型</string>
    <string name="shop_busy">产线繁忙</string>
    <string name="produce_problem">无法生产</string>
    <string name="location_error">定位错误，应属其他区域</string>
    <string name="other">其他</string>

    <string name="question_idea">处理建议</string>
    <string name="cancel_order">取消订单</string>
    <string name="modify_order_time">改约时间</string>

    <string name="print">打印</string>
    <string name="print_again">已打印</string>

    <!--自动更新相关-->
    <string name="version_update">版本更新</string>
    <string name="downloading">正在下载新版本,请稍等..</string>
    <string name="check_update">检测更新</string>
    <string name="check_internet">请检查网络连接</string>
    <string name="is_already_new_version">已是最新版本</string>
    <string name="ok">确认</string>
    <string name="cacel">取消</string>
    <string name="profile_not_exist">配置文件不存在</string>
    <string name="confirm_download">检测到新版本: <xliff:g id="name">%s</xliff:g>\n是否下载更新?</string>
    <string name="download_fail">下载 小哥Lyan 失败,请重新尝试</string>
    <string name="start_download">已经开始下载</string>

    <string name="batch_coffee_prompt">系统已将<xliff:g id="order_num">%d</xliff:g>单合并在一起，共有<xliff:g id="cup_num">%d</xliff:g>杯咖啡待生产，生成时效为<xliff:g id="time_effect">%d</xliff:g>分钟\n
                 建议生产顺序为 : <xliff:g id="sort">%s</xliff:g></string>

    <string name="batch_sf_prompt">本组有<xliff:g id="order_num">%d</xliff:g>单顺风单，共有<xliff:g id="cup_num">%d</xliff:g>杯咖啡待生产
                \n建议生产顺序为 : <xliff:g id="sort">%s</xliff:g></string>

    <string name="print_paster">打印\n贴纸</string>
    <string name="print_material">打印\n物料</string>
    <string name="menu_assign_order">指派订单</string>

    <string name="print_small">打印\n小纸</string>
    <string name="print_big">打印\n大纸</string>

    <string name="total_quantity">共计 :   x  <xliff:g id="cup_count">%d</xliff:g></string>
    <string name="sf_batch_start">批量开始</string>
    <string name="sf_batch_produced">批量完成</string>
    <string name="sf_batch_print">批量打印</string>
    <string name="change_shop">变更生产点</string>
    <string name="change_address">变更订单地址</string>
    <string name="change_date">变更订单日期</string>
    <string name="change_time">变更订单时间</string>

    <string name="count_all">全部(<xliff:g id="count">%d</xliff:g>)</string>
    <string name="count_good">良好(<xliff:g id="count">%d</xliff:g>)</string>
    <string name="count_passed">合格(<xliff:g id="count">%d</xliff:g>)</string>
    <string name="count_not_passed">不及格(<xliff:g id="count">%d</xliff:g>)</string>
    <string name="time_effect_description">服务时效（及时单）:下单 ~ 送达\t\t\t\t良好:0 ~ 30\t\t\t\t及格:30 ~ 60\t\t\t不及格:T>60
     \n服务时效（预约单）: 预约时段T1~T2\t良好:T1-45 ~ T2\t及格:T2 ~ T2+5\t不及格:除此以外</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assign_success">指派成功</string>
    <string name="coffee_moli">芝士云顶茉莉</string>
    <string name="coffee_hongyu">芝士云顶红玉</string>
    <string name="select_material">请选择要打印的物料</string>
    <string name="batch_start">批量开始</string>
    <string name="batch_select">批量选择</string>

</resources>
