<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="问题反馈"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stretchColumns="0,1">
        <TableRow >
            <Button
                android:id="@+id/btn_change_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_shop"/>
            <Button
                android:id="@+id/btn_change_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_address"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/btn_change_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_date"/>
            <Button
                android:id="@+id/btn_change_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_time"/>
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/et_issue_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="160dp"
        android:background="@drawable/bg_edit"
        android:gravity="left|top"
        android:hint="详细说明"/>


    <Button
        android:id="@+id/btn_commit_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="反馈提交"/>

</LinearLayout>