<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <FrameLayout
        android:id="@+id/tab_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       />
    <RadioGroup
        android:id="@+id/group_body"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/theme_gray_bg"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.lyancafe.coffeeshop.widget.TabRadioButton
            android:id="@+id/rb_to_do"
            style="@style/MyWidget.home.fragment_tab.btn"
            android:checked="true"
            android:text="@string/tab_todo_orders"
            android:textColor="@color/radiobutton_text_press" />

        <com.lyancafe.coffeeshop.widget.TabRadioButton
            android:id="@+id/rb_order_query"
            style="@style/MyWidget.home.fragment_tab.btn"
            android:text="@string/tab_orders_query" />

        <com.lyancafe.coffeeshop.widget.TabRadioButton
            android:id="@+id/rb_shop_manager"
            style="@style/MyWidget.home.fragment_tab.btn"
            android:text="@string/tab_shop_manager" />

    </RadioGroup>

</RelativeLayout>
